frontend/loadBalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: loadBalancer
spec:
  type: LoadBalancer
  selector:
    app: loadBalancer
  ports:
  - name: web-port
    port: 80
    protocol: TCP
